force-app/main/default/objects/TB_Outbox_Message__c/TB_Outbox_Message__c.object-meta.xml
<CustomObject>
    <description>Stores Outbox &quot;Message&quot;.  Each Message may trigger 0 or more Outbox record</description>
    <label>Outbox Message</label>
    <nameField>
        <displayFormat>OE-{0000}</displayFormat>
        <label>Outbox Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbox Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>