force-app/main/default/objects/TB_Outbox_Message__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Sequence Number</label>
    <type>AutoNumber</type>
</CustomField>