force-app/main/default/objects/TB_Outbox_Message__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of the message to fire.  Much match the DeveloperName of an Message Definition</description>
    <inlineHelpText
    >The type of the message to fire.  Much match the DeveloperName of an Message Definition</inlineHelpText>
    <label>Message Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>